WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217875
[LFC][IFC] Incorrect inline level box geometry
https://bugs.webkit.org/show_bug.cgi?id=217875
Summary
[LFC][IFC] Incorrect inline level box geometry
alan
Reported
2020-10-17 09:06:31 PDT
while the associate runs have the correct geometry, the boxes don't which results in incorrect render tree dumps
Attachments
Patch
(4.78 KB, patch)
2020-10-17 09:12 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-10-17 09:12:17 PDT
Created
attachment 411668
[details]
Patch
EWS
Comment 2
2020-10-17 10:00:40 PDT
Committed
r268645
: <
https://trac.webkit.org/changeset/268645
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 411668
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-10-17 10:01:18 PDT
<
rdar://problem/70408775
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug