[LFC][IFC] Incorrect inline level box geometry https://bugs.webkit.org/show_bug.cgi?id=217875

Reviewed by Antti Koivisto.

While the generated runs have the correct geometry (they are painted at the correct position), the associated box
geometry is incorrect which results in broken render tree dumps and incorrect geometry related DOM values.
In this patch we use the correct LineBox API to get the InlineLevelBox's geometry (LineBox::InlineLevelBox::logicalRect is relative to the parent inline box and not relative to the line box).

* layout/inlineformatting/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::computeGeometryForLineContent):


Canonical link: https://commits.webkit.org/230603@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268645 268f45cc-cd09-0410-ab3c-d52691b4dbfc